<resources>
    <string name="app_name">EJEntregar</string>
    <string name="Ocultar">Ocultar</string>
    <string name="fav">Favoritos</string>
    <string name="listado">Listado completo</string>
    <string name="Añadir">Añadir estreno</string>
    <string name="titulo">Titulo</string>
    <string name="director">Director</string>
    <string name="duracion">Duración(min)</string>
    <string name="sala">Sala</string>
    <string name="pg">PG</string>
    <string name="pg13">PG-13</string>
    <string name="r">R</string>
    <string name="g">G</string>
    <string name="cal">Establecer fecha</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string-array name="salas">
        <item>Gran vía</item>
        <item>Plaza elíptica</item>
        <item>Travesia</item>
    </string-array>
</resources>